Fix horizontal flickering of samples (#70)

--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -29,6 +29,7 @@ $custom-icon-button-theme: icon-button-theme(
   width: 100%;
   overflow: hidden;
   display: flex;
+  position: relative;
   flex: 1;
 }
 
